--- a/src/weather-container/weatherCard.css
+++ b/src/weather-container/weatherCard.css
@@ -5,15 +5,10 @@ body {
   padding: 0;
   min-height: 100vh;
   text-align: center;
+  transition: background-color 0.3s ease, background-image 0.3s ease;
 }
 
-.weather-container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 1rem;
-  position: relative;
-  background-color: rgba(243, 244, 246, 0.8);
-}
+
 
 .search-box {
   position: fixed;
