ajustes en los css para weatherCard

--- a/src/weatherCard/WeatherCard.css
+++ b/src/weatherCard/WeatherCard.css
@@ -57,10 +57,6 @@
     gap: 12px;
 }
 
-.current-weather__icon {
-    font-size: 48px;
-}
-
 .current-weather__temp {
     font-size: 64px;
     font-weight: 300;
@@ -123,11 +119,6 @@
     margin-bottom: 8px;
 }
 
-.hourly-icon {
-    font-size: 24px;
-    margin: 8px 0;
-}
-
 .hourly-temp {
     font-size: 18px;
     font-weight: 500;
@@ -164,7 +155,6 @@
     gap: 12px;
     overflow-x: auto;
     padding-bottom: 6px;
-    padding-right: 16px;
     margin-bottom: 6px;
     -webkit-overflow-scrolling: touch;
     scrollbar-width: thin;
@@ -187,18 +177,19 @@
 .forecast-hour {
     text-align: center;
     min-width: 44px;
-    flex-shrink: 0;
+    text-align: center;
+    min-width: 44px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    row-gap:4px;
 }
 
 .forecast-hour__time {
     font-size: 10px;
     color: #8b939c;
-    margin-bottom: 1px;
-}
-
-.forecast-hour__icon {
-    font-size: 16px;
-    margin: 1px 0;
 }
 
 .forecast-hour__temp {
@@ -276,11 +267,6 @@
     font-size: 10px;
     color: #8b939c;
     margin-bottom: 1px;
-}
-
-.forecast-hour__icon {
-    font-size: 16px;
-    margin: 1px 0;
 }
 
 .forecast-hour__temp {
