--- a/src/wind/wind.css
+++ b/src/wind/wind.css
@@ -64,14 +64,13 @@
 
 .compass-arrow {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 37%;
+    left: 40%;
     transform-origin: center;
-    font-size: 48px;
-    color: white;
+    font-size: 70px;
     margin-top: -30px;
     margin-left: -12px;
-    font-weight: bold;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .compass-labels {
