mejorado css y organizadas carpetas

--- a/src/feeling/feeling.css
+++ b/src/feeling/feeling.css
@@ -1,9 +1,15 @@
 .current_feelsLike {
-    background: rgba(45, 55, 72, 0.9);
+ background: rgba(45, 55, 72, 0.9);
     border-radius: 20px;
     padding: 20px;
     color: white;
     flex: 1;
+    margin-bottom: 12px;
+    width: 200px; /* Ancho fijo */
+    height: 200px; /* Alto fijo */
+    display: flex;
+    flex-direction: column;
+
 }
 
 .feels-header {
