--- a/src/sunrise/sunrise.css
+++ b/src/sunrise/sunrise.css
@@ -2,10 +2,14 @@
     background: rgba(45, 55, 72, 0.9);
     border-radius: 20px;
     padding: 20px;
-    margin-bottom: 20px;
     color: white;
+    flex: 1;
+    margin-bottom: 12px;
+    width: 200px; /* Ancho fijo */
+    height: 225px; /* Alto fijo */
+    display: flex;
+    flex-direction: column;
 }
-
 .sunrise-header {
     display: flex;
     align-items: center;
