--- a/src/weatherCarousel/weatherCardsCarousel.css
+++ b/src/weatherCarousel/weatherCardsCarousel.css
@@ -61,11 +61,15 @@
     right: 16px;
 }
 
-.carousel-dots {
+.carousel-Card-dots {
     display: flex;
     justify-content: center;
     gap: 8px;
-    margin-top: 16px;
+    position: fixed;
+    bottom: 24px;
+    left: 0;
+    right: 0;
+    z-index: 10000;
 }
 
 .carousel-dot {
