--- a/src/clouds/clouds.css
+++ b/src/clouds/clouds.css
@@ -1,13 +1,12 @@
-.current_clouds
- {
+.current_clouds {
     background: rgba(45, 55, 72, 0.9);
     border-radius: 20px;
     padding: 20px;
     color: white;
     flex: 1;
     margin-bottom: 12px;
-    width: 200px; 
-    height: 200px; 
+    width: 200px;
+    height: 200px;
     display: flex;
     flex-direction: column;
 }
@@ -45,6 +44,7 @@
     margin-left: 5px;
     font-weight: normal;
 }
+
 .progress-ring__circle {
     transition: stroke-dashoffset 0.5s ease-in-out;
 }
