--- a/src/weatherCarousel/WeatherCardsCarousel.css
+++ b/src/weatherCarousel/WeatherCardsCarousel.css
@@ -112,7 +112,15 @@
 
 @media (max-width: 480px) {
     .carousel-nav {
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
+    }
+
+    .carousel-nav.prev {
+        left: 16px;
+    }
+    
+    .carousel-nav.next {
+        right: 16px;
     }
 }
