--- a/src/weatherToday/WeatherToday.css
+++ b/src/weatherToday/WeatherToday.css
@@ -42,7 +42,11 @@
     font-weight: 500;
 }
 
-.current-weather__details{
+.current-weather__description::first-letter {
+    text-transform: capitalize;
+}
+
+.current-weather__details {
     font-size: 24px;
     font-weight: 500;
 }
@@ -139,8 +143,8 @@
         font-size: 20px;
         font-weight: 500;
     }
-    
-    .current-weather__details{
+
+    .current-weather__details {
         font-size: 20px;
         font-weight: 500;
     }
