--- a/src/favorites/FavoritesList.css
+++ b/src/favorites/FavoritesList.css
@@ -1,10 +1,21 @@
 .carousel-container {
     width: 100%;
+    max-width: 600px;
+    margin: auto;
     padding: 0;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.fav-container {
+    width: 100%;
+    height: 250px;
+}
+
+.fav-container.hidden {
+    display: none;
 }
 
 .carousel-content {
@@ -64,6 +75,7 @@
     padding: 0;
     position: absolute;
     z-index: 2;
+    background: none;
 }
 
 .carousel-button:focus {
@@ -71,11 +83,11 @@
 }
 
 .carousel-button.prev {
-    left: 0;
+    left: 0px;
 }
 
 .carousel-button.next {
-    right: 0;
+    right: 0px;
 }
 
 .carousel-button svg {
@@ -121,7 +133,6 @@
         max-width: 500px;
     }
 
-   
     .favorite-item .current-weather {
         padding: 16px;
     }
@@ -153,22 +164,21 @@
         top: 50%;
         transform: translateY(-50%);
         z-index: 10;
-        background: rgba(0, 0, 0, 0.3);
         border-radius: 50%;
         width: 36px;
         height: 36px;
     }
 
     .carousel-button:hover {
-        background: rgba(0, 0, 0, 0.5);
+        transform:scale(2) translateY(-25%);
     }
 
     .carousel-button.prev {
-        left: 8px;
+        left: -10px;
     }
 
     .carousel-button.next {
-        right: 8px;
+        right: -10px;
     }
 
     .carousel-button svg {
