--- a/src/map/Map.css
+++ b/src/map/Map.css
@@ -3,6 +3,8 @@
     border-radius: 20px;
     padding: 20px;
     margin-bottom: 20px;
+    margin-top: 20px;
+    background:rgba(255, 255, 255, 0.1)
 }
 
 .map-container {
