--- a/src/pollution/Pollution.css
+++ b/src/pollution/Pollution.css
@@ -18,7 +18,8 @@
     border-radius: 20px;
     padding: 20px;
     color: white;
-    margin-bottom: 16px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     width: 100%;
     box-sizing: border-box;
     display: flex;
