--- a/src/weatherModal/WeatherModal.css
+++ b/src/weatherModal/WeatherModal.css
@@ -8,17 +8,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10000;
+    z-index: 10050;
 }
 
 .modal-content {
     background: rgba(45, 55, 72, 0.95);
     border-radius: 20px;
-    padding: 30px;
+    padding: 20px;
     width: 90%;
     max-width: 800px;
-    max-height: 90vh;
-    overflow-y: auto;
+    height: 90vh;
     position: relative;
     color: white;
     z-index: 10001;
@@ -84,6 +83,8 @@
 .modal-content .current-weather__details {
     text-align: center;
     color: #e2e8f0;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .modal-content .current-weather__details p {
@@ -192,9 +193,16 @@
     background: rgba(255, 255, 255, 0.15);
 }
 
+.modal {
+    position: relative;
+    overflow-y: auto;
+    height: 100%;
+    padding: 20px;
+}
 
 .modal-content::-webkit-scrollbar {
     width: 8px;
+    height: 300px;
 }
 
 .modal-content::-webkit-scrollbar-track {
